rewrite library config